--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,145 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Reproducible Research - Course Project 1"
+output: html_document
 ---
-
 
 ## Loading and preprocessing the data
 
+1. Load the data (i.e. read.csv())
+
+```{r, echo=TRUE}
+data <- read.csv("~/Data Science - Coursera/5. Reproducible Research/Course Project 1/repdata%2Fdata%2Factivity/activity.csv")
+```
+
+2. Process/transform the data (if necessary) into a format suitable for your analysis
+
+```{r, echo=TRUE}
+str(data)
+```
+
+```{r, echo=TRUE}
+data$date <- as.Date(data$date)
+```
+
+```{r, echo=TRUE}
+summary(data)
+```
 
 
 ## What is mean total number of steps taken per day?
 
+For this part of the assignment, you can ignore the missing values in the dataset.
+
+1. Calculate the total number of steps taken per day
+
+```{r, echo=TRUE}
+total_steps_day <- aggregate(steps ~ date, data, sum)
+```
+
+2. If you do not understand the difference between a histogram and a barplot, research the difference between
+them. Make a histogram of the total number of steps taken each day
+
+```{r, echo=TRUE}
+hist(total_steps_day$steps, main="Number of steps taken each day", col="red")
+```
+
+3. Calculate and report the mean and median of the total number of steps taken per day
+
+```{r, echo=TRUE}
+mean(total_steps_day$steps, na.rm=TRUE)
+```
+
+```{r, echo=TRUE}
+median(total_steps_day$steps, na.rm=TRUE)
+```
 
 
 ## What is the average daily activity pattern?
 
+1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps
+taken, averaged across all days (y-axis)
 
+```{r, echo=TRUE}
+average_steps_interval <- aggregate(steps ~ interval, data, mean)
+with(average_steps_interval , plot(interval, steps, main="Average number of steps taken", 
+                                   xlab="Intervals", ylab="Number of steps", type="l", col="red"))
+```
 
+     
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{r, echo=TRUE}
+average_steps_interval[which.max(average_steps_interval$steps), "interval"]
+```
+                             
 ## Imputing missing values
 
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
 
+```{r, echo=TRUE}
+nrow(data[!complete.cases(data),])
+```
+
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be
+sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+```{r, echo=TRUE}
+average_steps_interval <- aggregate(steps ~ interval, data, mean)
+```
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+```{r, echo=TRUE}
+data_fill_missing <- data
+data_fill_missing [!complete.cases(data_fill_missing ),"steps"] <- average_steps_interval$steps 
+total_steps_day_missing  <- aggregate(steps ~ date, data_fill_missing, sum)
+```
+
+4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median
+total number of steps taken per day. Do these values differ from the estimates from the first part of the
+assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+```{r, echo=TRUE}
+hist(total_steps_day_missing$steps, main="Number of steps taken each day", col="blue")
+```
+```{r, echo=TRUE}
+mean(total_steps_day_missing$steps)
+```
+
+```{r, echo=TRUE}
+median(total_steps_day_missing$steps)
+```
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+1. Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether
+a given date is a weekday or weekend day.
+
+```{r, echo=TRUE}
+for(i in 1:nrow(data_fill_missing)){
+if(weekdays(data_fill_missing[i,"date"])=="sábado" | weekdays(data_fill_missing[i,"date"])=="domingo" )
+{ data_fill_missing[i,"type_date"] <- "weekend" }
+else data_fill_missing[i,"type_date"] <- "weekday" 
+}
+data_fill_missing$type_date <- as.factor(data_fill_missing$type_date)
+```
+
+2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the
+average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in
+the GitHub repository to see an example of what this plot should look like using simulated data.
+
+```{r, echo=TRUE}
+average_steps_interval_missing <- aggregate(data_fill_missing$steps, by=list(data_fill_missing$interval, 
+                                                                             data_fill_missing$type_date), FUN=mean)
+
+names(average_steps_interval_missing) <- c("interval", "type_date", "steps")
+
+library(lattice)
+xyplot(steps ~ interval | type_date , data=average_steps_interval_missing, xlab="Interval", ylab="NUmber of steps",
+       type="l",
+       layout = c(1,2))
+
+```
+
+
+
